fix Work Sans flicker

--- a/src/assets/css/variables.css
+++ b/src/assets/css/variables.css
@@ -6,7 +6,7 @@
 
   /* typography */
   --line-height: 1.8;
-  --font-family-sans-serif: 'Work Sans Variable', system-ui, -apple-system,
+  --font-family-sans-serif: 'Work Sans', system-ui, -apple-system,
     BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
     sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
     'Noto Color Emoji';
